[package]
name = "cert"
description = "Uncertainty propagation and manipulation"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Christopher Gubbin <chris.gubbin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/cgubbin/cert"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5.1"
rand = "0.8.5"
